// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render MessageBoxComponent 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": undefined,
      "bottom": 0,
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "padding": 15,
      "position": "absolute",
      "width": "100%",
    }
  }
>
  <Text
    style={
      Object {
        "flex": 8,
        "fontSize": 15,
        "fontWeight": "bold",
      }
    }
  >
    Hello
  </Text>
</View>
`;

exports[`should render MessageBoxComponent with icon 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": undefined,
      "bottom": 0,
      "flex": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "padding": 15,
      "position": "absolute",
      "width": "100%",
    }
  }
>
  <Text />
  <Text
    style={
      Object {
        "flex": 8,
        "fontSize": 15,
        "fontWeight": "bold",
      }
    }
  >
    Hello
  </Text>
</View>
`;
